Memory leak while playing animation due to 'Point to Volume' node #120402

Closed
opened 2024-04-08 15:04:40 +02:00 by Philipp Oeser · 3 comments
Member

System Information
Operating system: Linux-6.7.10-200.fc39.x86_64-x86_64-with-glibc2.38 64 Bits, X11 UI
Graphics card: NVIDIA GeForce RTX 3080 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 550.67

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-04-07 21:03, hash: 2d5a83f2941f
Worked: 4.0.2

Caused by a72e7a220d

Short description of error
Memory leaks playing anymation, rising continuously until blender crashes

Exact steps for others to reproduce the error

  • open test new.blend from #120376 (explicit content, be aware!)
  • play animation
  • watch your memory consumption rise (until blender finally crashes)
**System Information** Operating system: Linux-6.7.10-200.fc39.x86_64-x86_64-with-glibc2.38 64 Bits, X11 UI Graphics card: NVIDIA GeForce RTX 3080 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 550.67 **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-04-07 21:03, hash: `2d5a83f2941f` Worked: 4.0.2 Caused by a72e7a220d9fc7821911918bfed7bb09ecfff830 **Short description of error** Memory leaks playing anymation, rising continuously until blender crashes **Exact steps for others to reproduce the error** - open `test new.blend` from #120376 (**explicit content, be aware!**) - play animation - watch your memory consumption rise (until blender finally crashes)
Philipp Oeser added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-04-08 15:04:41 +02:00
Philipp Oeser changed title from Memory leaks playing anymation to Memory leaks playing animation 2024-04-08 15:04:55 +02:00
Author
Member
CC @JacquesLucke

I can confirm...
Detected 972 dependency cycles.......

I can confirm... `Detected 972 dependency cycles`.......

I simplified the file as much as I could and noticed that the problem seems to be in the Point to Volume node.

I simplified the file as much as I could and noticed that the problem seems to be in the `Point to Volume` node.
Germano Cavalcante changed title from Memory leaks playing animation to Memory leak while playing animation due to 'Point to Volume' node 2024-04-09 16:54:03 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-10 14:11:11 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#120402
No description provided.