Fix #120402: memory leak in volume grid handling

The openvdb tree was not freed correctly because the destuctor
of the `shared_ptr` was not run.